Updates from Overleaf

--- a/sections/results.tex
+++ b/sections/results.tex
@@ -219,8 +219,9 @@ DECaLS South (comp. cut)  & Nonlinear Three Maps& $    29$& $    28$& $     8<\f
 \end{figure*}
 
 \begin{figure}
-\includegraphics[width=0.4\textwidth]{figures/fnl_p.pdf}
-\includegraphics[width=0.4\textwidth]{figures/fnl_magbias.pdf}
+\raggedleft
+\includegraphics[width=0.45\textwidth]{figures/fnl_p.pdf}
+\includegraphics[width=0.437\textwidth]{figures/fnl_magbias.pdf}
 \caption{\mr{Best fitting estimates and $68\%$ ($95\%$) error on $\fnl$ from the DESI DR9 LRG sample with the non-linear three maps cleaning approach. The constraints do not change while varying $s$ unlike $p$, which shows noticeable sensitivity. The fiducial values are marked by stars.}}\label{fig:fnl_magbias}
 \end{figure}
 
