--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -104,7 +104,7 @@ Figure \ref{fig:bestfit_mocks} shows the best-fitting estimates for $b$ vs $\fnl
 \end{equation}
 For infinitesimal values of $\fnl$, the derivative becomes asymptotically independent from $\fnl$ while for large values of $\fnl$ is decreases as $2/\fnl$. This implies that for the $\fnl=0$ mocks, the likelihood is more likely to be skewed toward negative values.
 
-\subsection{Contaminated mocks}
+\subsection{Contaminated mocks}\label{ssec:contmocks}
 Our nonlinear neural network-based approach is applied to the $\fnl=0$ and $76.9$ mocks. We only consider the methods that include running the neural network with three, four, and nine imaging systematic maps. The measured mean power spectrum of the mocks are shown in Figure \ref{fig:clmocks} for $\fnl=0$ (left) and $76.9$ (right). The solid and dashed curves show the measurements respectively from the clean and contaminated mocks.
 
 \begin{figure*}
