--- a/sections/results.tex
+++ b/sections/results.tex
@@ -222,7 +222,7 @@ DECaLS South (comp. cut)  & Nonlinear Three Maps& $    29$& $    28$& $     8<\f
 \raggedleft
 \includegraphics[width=0.45\textwidth]{figures/fnl_p.pdf}
 \includegraphics[width=0.437\textwidth]{figures/fnl_magbias.pdf}
-\caption{\mr{Best fitting estimates and $68\%$ ($95\%$) error on $\fnl$ from the DESI DR9 LRG sample with the non-linear three maps cleaning approach. The constraints do not change while varying $s$ unlike $p$, which shows noticeable sensitivity. The fiducial values are marked by stars.}}\label{fig:fnl_magbias}
+\caption{\mr{Best fitting estimates and $68\%$ ($95\%$) error on $\fnl$ from the DESI DR9 LRG sample with the non-linear three maps cleaning approach. The fiducial values are marked by stars. The constraints are stable against different values of $s$, but show noticeable sensitivity to $p$. As the value of $p$ increases the local PNG term decreases and thus the constraints get relaxed.}}\label{fig:fnl_magbias}
 \end{figure}
 
 
